--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
-    "dev": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch"
+    "build": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.5"
   }
 }
