--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "build": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch"
+    "build": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
+    "lint": "npx eslint . --fix"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.5"
