--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "build": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
-    "lint": "npx eslint . --fix"
+    "eslint": "npx eslint .",
+    "test": ""
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
