--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ media
 # <django-project-name>/staticfiles/
 
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Python,Django
+.vercel
