--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,6 @@
 asgiref==3.7.2
-cfgv==3.4.0
-click==8.1.7
-colorama==0.4.6
-coverage==7.3.2
-cssbeautifier==1.14.11
-distlib==0.3.8
+coverage==7.4.0
 Django==4.2.7
-django-appconf==1.0.6
-djlint==1.34.0
-EditorConfig==0.12.3
-filelock==3.13.1
-flake8==6.1.0
-html-tag-names==0.1.2
-html-void-elements==0.1.0
-identify==2.5.33
-isort==5.13.1
-jsbeautifier==1.14.11
-json5==0.9.14
-mccabe==0.7.0
-nodeenv==1.8.0
-pathspec==0.11.2
-platformdirs==4.1.0
-pre-commit==3.6.0
-psycopg2==2.9.9
-pycodestyle==2.11.1
-pyflakes==3.1.0
-PyYAML==6.0.1
-rcssmin==1.1.1
-regex==2023.10.3
-rjsmin==1.2.1
-six==1.16.0
 slippers==0.6.2
 sqlparse==0.4.4
-tqdm==4.66.1
-typeguard==2.13.3
-typing_extensions==4.8.0
-virtualenv==20.25.0
+psycopg2-binary==2.9.9
