Render product details

--- a/templates/components.yml
+++ b/templates/components.yml
@@ -2,3 +2,4 @@ components:
   navbar: "components/navbar.html"
   footer: "components/footer.html"
   product_list: "components/product_list.html"
+  product_overview: "components/product_overview.html"
