Create orders app and page UI

--- a/templates/components.yml
+++ b/templates/components.yml
@@ -4,3 +4,4 @@ components:
   product_list: "components/product_list.html"
   product_overview: "components/product_overview.html"
   reviews: "components/reviews.html"
+  order_history: "components/order_history.html"
