--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Deploy Project Artifacts to Vercel
         id: vercel
         env:
-          META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
+          META_TAG: ${{ steps.hash_branch.outputs.digest }}
         run: |
           vercel --version
           vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
