--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -27,13 +27,6 @@ jobs:
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: extract_branch
 
-      - name: Hash branch name
-        uses: pplanel/hash-calculator-action@v1.3.1
-        id: hash_branch
-        with:
-          input: ${{ steps.extract_branch.outputs.branch }}
-          method: MD5
-
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
@@ -55,17 +48,17 @@ jobs:
       - name: Deploy Project Artifacts to Vercel
         id: vercel
         env:
-          META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
+          BRANCH_NAME: ${{ steps.extract_branch.outputs.branch }}
         run: |
           vercel --version
           vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
           vercel build --token=$VERCEL_TOKEN
-          vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }}
+          vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.BRANCH_NAME }}
 
-          vercel ls --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }} &> vercel-output
+          vercel ls --token=$VERCEL_TOKEN --meta base_hash=${{ env.BRANCH_NAME }} &> vercel-output
           url=$(cat vercel-output | grep http | awk '{print $2}')
           echo "New preview URL: $url"
-          echo "META_TAG=$META_TAG"
+          echo "BRANCH_NAME=$BRANCH_NAME"
           echo "VERCEL_URL=$url" >> "$GITHUB_OUTPUT"
 
       - uses: mshick/add-pr-comment@v2
