--- a/.github/workflows/drop-preview.yml
+++ b/.github/workflows/drop-preview.yml
@@ -27,15 +27,8 @@ jobs:
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: extract_branch
 
-      - name: Hash branch name
-        uses: pplanel/hash-calculator-action@v1.3.1
-        id: hash_branch
-        with:
-          input: ${{ steps.extract_branch.outputs.branch }}
-          method: MD5
-
-      - name: Call the delete-deployment-preview.sh script
+      - name: Call the droppreview.sh script
         env:
-          META_TAG: ${{ steps.hash_branch.outputs.digest }}
+          BRANCH_NAME: ${{ steps.extract_branch.outputs.branch }}
         run: |
           bash ./scripts/drop_preview.sh
