--- a/vercel.json
+++ b/vercel.json
@@ -7,17 +7,15 @@
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-      "src": "build.sh",
+      "src": "scripts/build.sh",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles_build"
-      }
+      "config": { "distDir": "../staticfiles_build" }
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "src": "../static/(.*)",
+      "dest": "../static/$1"
     },
     {
       "src": "/(.*)",
